# ect

./: CMakeLists.txt  conanfile.txt
client/: CMakeLists.txt  main.cpp  tcpclient.cpp  tcpclient.h
lib/: CMakeLists.txt  clientinfo.h  tcpserver.cpp  tcpserver.h  unixsock.cpp  unixsock.h
rev1/: CMakeLists.txt  main.cpp
rev2/: CMakeLists.txt  main.cpp
